# agent-couldflare

./: .gitignore
backend/: alembic.ini  database.py  main.py  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: d5f27fbf9a9f_create_table_chat.py  f752e862eb33_initial.py
backend/models/: __init__.py  chats.py  type.py  user.py
backend/router/: __init__.py  chat.py  user.py
backend/schemas/: chats.py  user.py
